clang/test/BSC/Negative/Ownership/Owned/owned_pointer_op/owned_pointer_op.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

void test1() {
    int* owned p1;
    int* owned p2 = p1 + 1; //expected-error {{invalid operands to binary expression ('int *owned' and 'int')}}
    int* owned p3 = 1 + p1; //expected-error {{invalid operands to binary expression ('int' and 'int *owned')}}
    int* owned p4;

    if (p1 == p4) {
        return;
    }
}

void test2() {
    int* owned p1;
    p1++;                   //expected-error {{invalid operands to unary expression ('int *owned')}}
    int* owned p2 = p1[0];  //expected-error {{owned pointer type ('int *owned') do not support ArraySubscript operate}}
    int x = *p1;
    int* owned* p3 = &p1;
}

void test3(int* owned a, int* owned b) {
    int* owned c = a;
    int* owned d = c;
    c = b;  //legal BinaryOperator '=' is allowed
}